--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<jmh.version>1.14.1</jmh.version>
 	</properties>
 
 	<dependencies>
@@ -33,7 +34,24 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<!--<scope>test</scope>-->
+		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.carrotsearch</groupId>-->
+			<!--<artifactId>junit-benchmarks</artifactId>-->
+			<!--<version>0.7.2</version>-->
+		<!--</dependency>-->
+
+		<dependency>
+			<groupId>org.openjdk.jmh</groupId>
+			<artifactId>jmh-core</artifactId>
+			<version>${jmh.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjdk.jmh</groupId>
+			<artifactId>jmh-generator-annprocess</artifactId>
+			<version>${jmh.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
