--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,14 @@
 			<version>${jmh.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<!--	guice	-->
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>4.2.2</version>
+		</dependency>
 
+		<!--	guice	-->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
