--- a/pom.xml
+++ b/pom.xml
@@ -100,14 +100,14 @@
 	</build>
 
 	<repositories>
-		<!-- <repository>
+		<repository>
 			<id>public</id>
 			<name>aliyun nexus</name>
 			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
-		</repository> -->
+		</repository>
 
 		<!-- add the elasticsearch repo -->
 		<repository>
