--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>java8</module>
+		<module>dagger</module>
+		<module>guice</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -33,26 +35,26 @@
 	</build>
 
 	<repositories>
-		<repository>
-			<id>public</id>
-			<name>aliyun nexus</name>
-			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
+<!--		<repository>-->
+<!--			<id>public</id>-->
+<!--			<name>aliyun nexus</name>-->
+<!--			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
+<!--			<releases>-->
+<!--				<enabled>true</enabled>-->
+<!--			</releases>-->
+<!--		</repository>-->
 
-		<!-- add the elasticsearch repo -->
-		<repository>
-			<id>elasticsearch-releases</id>
-			<url>https://artifacts.elastic.co/maven</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
+<!--		&lt;!&ndash; add the elasticsearch repo &ndash;&gt;-->
+<!--		<repository>-->
+<!--			<id>elasticsearch-releases</id>-->
+<!--			<url>https://artifacts.elastic.co/maven</url>-->
+<!--			<releases>-->
+<!--				<enabled>true</enabled>-->
+<!--			</releases>-->
+<!--			<snapshots>-->
+<!--				<enabled>false</enabled>-->
+<!--			</snapshots>-->
+<!--		</repository>-->
 	</repositories>
 
 </project>
