--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -48,6 +48,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.2.3</version>
+            <scope>compile</scope>
+        </dependency>
         <!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient &ndash;&gt;-->
         <!--		<dependency>-->
         <!--			<groupId>org.apache.httpcomponents</groupId>-->
