--- a/pom.xml
+++ b/pom.xml
@@ -8,31 +8,16 @@
 		<module>dagger</module>
 		<module>guice</module>
 	</modules>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.5.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
 	<groupId>com.tianyongwei</groupId>
 	<artifactId>playground</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>playground</name>
-	<description>dirty hand!</description>
+	<description>my playground</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<jmh.version>1.14.1</jmh.version>
 	</properties>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 
 	<repositories>
 		<repository>
@@ -43,7 +28,6 @@
 				<enabled>true</enabled>
 			</releases>
 		</repository>
-
 		<!-- add the elasticsearch repo -->
 		<repository>
 			<id>elasticsearch-releases</id>
