--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -10,29 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>java8</artifactId>
+    <properties>
+        <jmh.version>1.14.1</jmh.version>
+    </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <!--<scope>test</scope>-->
-        </dependency>
-        <!--<dependency>-->
-        <!--<groupId>com.carrotsearch</groupId>-->
-        <!--<artifactId>junit-benchmarks</artifactId>-->
-        <!--<version>0.7.2</version>-->
-        <!--</dependency>-->
-
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
@@ -47,6 +28,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
@@ -54,28 +36,6 @@
             <version>4.2.3</version>
             <scope>compile</scope>
         </dependency>
-        <!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient &ndash;&gt;-->
-        <!--		<dependency>-->
-        <!--			<groupId>org.apache.httpcomponents</groupId>-->
-        <!--			<artifactId>httpclient</artifactId>-->
-        <!--			<version>4.5.6</version>-->
-        <!--		</dependency>-->
-
-        <!--		&lt;!&ndash; https://mvnrepository.com/artifact/commons-io/commons-io &ndash;&gt;-->
-        <!--		<dependency>-->
-        <!--			<groupId>commons-io</groupId>-->
-        <!--			<artifactId>commons-io</artifactId>-->
-        <!--			<version>2.6</version>-->
-        <!--		</dependency>-->
-
-        <!--		&lt;!&ndash; https://mvnrepository.com/artifact/com.alibaba/fastjson &ndash;&gt;-->
-        <!--		<dependency>-->
-        <!--			<groupId>com.alibaba</groupId>-->
-        <!--			<artifactId>fastjson</artifactId>-->
-        <!--			<version>1.2.58</version>-->
-        <!--		</dependency>-->
-
-
     </dependencies>
 
 </project>
