--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,10 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<jmh.version>1.14.1</jmh.version>
 	</properties>
+
+	<dependencies>
+	</dependencies>
 
 	<repositories>
 		<repository>
