--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>guice</artifactId>
 
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.google.inject</groupId>
