--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>java8</artifactId>
     <properties>
         <jmh.version>1.14.1</jmh.version>
+        <maven.compiler.target>1.11</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -35,6 +36,11 @@
             <artifactId>guice</artifactId>
             <version>4.2.3</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
         </dependency>
     </dependencies>
 
