--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencyManagement>
